GEODE-10098: Replaced raw pointer with unique_ptr.