cppcache/src/TcrMessage.hpp
@@ -181,7 +181,7 @@ class TcrMessage {
       MemberListForVersionStamp& memberListForVersionStamp);
 
   /* constructors */
-  void setData(const char* bytearray, int32_t len, uint16_t memId,
+  void setData(std::tuple<std::unique_ptr<char[]>, std::size_t>, uint16_t memId,
                const SerializationRegistry& serializationRegistry,
                MemberListForVersionStamp& memberListForVersionStamp);
 
@@ -342,7 +342,8 @@ class TcrMessage {
 
   // some private methods to handle things internally.
   void handleByteArrayResponse(
-      const char* bytearray, int32_t len, uint16_t endpointMemId,
+      std::tuple<std::unique_ptr<char[]>, std::size_t> buffer,
+      uint16_t endpointMemId,
       const SerializationRegistry& serializationRegistry,
       MemberListForVersionStamp& memberListForVersionStamp);
   void readObjectPart(DataInput& input, bool defaultString = false);
